# BlurSample

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/charlezz/blursample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/charlezz/blursample/: MainActivity.kt  MainViewModel.kt  SingleLiveEvent.java
app/src/main/java/com/charlezz/blursample/realtime/: LiveBlurActivity.kt  LiveBlurAdapter.kt
app/src/main/res/layout/: activity_live_blur.xml  activity_main.xml  view_image_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/charlezz/blursample/: ExampleUnitTest.kt
blur/: CMakeLists.txt  build.gradle
blur/src/androidTest/java/com/charlezz/blur/: ExampleInstrumentedTest.kt
blur/src/main/: AndroidManifest.xml
blur/src/main/cpp/: blur.cpp
blur/src/main/java/com/charlezz/blur/: AbstractBlur.kt  BlurEngine.kt  BlurType.kt  BoxBlur.kt  BoxBlurOptimized.kt  GaussianBlurRS.kt  GaussianBlurRs.kt  LiveBlurView.java  StackBlur.kt  StackBlurNative.kt  StackBlurRs.kt
blur/src/main/res/values/: attrs.xml
blur/src/main/rs/: ip.rsh  stackblur.rs
blur/src/test/java/com/charlezz/blur/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
